# hello-rust-arm-docker

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cross  justfile
.github/workflows/: build.yaml
src/: main.rs
