[package]
name = "hello-rust-arm-docker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
# reqwest = { version = "0.11.16", features = ["native-tls-vendored"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
